namespaces/live.cloud-platform.service.justice.gov.uk/laa-claim-for-payment-stubs-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-claim-for-payment-stubs-uat"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-e2e-claimandassess"
    cloud-platform.justice.gov.uk/application: "Stubs for LAA Claim for Payment and Assess a Claim"
    cloud-platform.justice.gov.uk/owner: "LAA Claim and Assess: laa-claim-and-assess-mailbox@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-claim-for-payment-stubs"
    cloud-platform.justice.gov.uk/team-name: "laa-claim-and-assess"
    cloud-platform.justice.gov.uk/review-after: ""
